<resources>
    <string name="app_name">LA RUTA</string>
    <string name="main">Inicio</string>
    <string name="tx_description">La Reserva Natural el Danubio es en definitiva un Paraíso. Para llegar puedes ir en carro , cuenta con una vía sin pavimentar pero ver el paisaje de selva tropical y su rio a mano izquierda valen la pena al 100%.</string>
    <string name="tx_interest">Sitios que puedes visitar:\n - Cascada de la sirena. \n - Cañón de anchicayá. \n - Los siete pozos.</string>
    <string name="tx_temp">26°C/ 78°F</string>
    <string name="tx_locate">Ubicación:\nDagua, Valle del Cauca</string>
    <string name="image_description">El danubio</string>
    <string name="place_image">Place Picture</string>
    <string name="configure_sound">Opciones de Sonido</string>
    <string name="get_messages">Opciones de Notificaciones</string>
    <string name="notifications">Activar notificaciones</string>
    <string name="sound">Notificaciones con sonido</string>
    <string name="exit">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>